deployment/kube-manifests/environments/dev/replication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linux-web
spec:
  replicas: 1
