deployment/kube-manifests/environments/dev/variables.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linux-web
spec:
  template:
    spec:
      containers:
        - name: linux-web
